--- a/WhereIsDalton/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WhereIsDalton/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -656,7 +656,7 @@ StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
