--- a/WhereIsDalton/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WhereIsDalton/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,8 +45,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@VR14
 LastExecutedLaunchName=VR14
 LastExecutedPIEPreviewDevice=
@@ -87,13 +87,33 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=ResourceSize
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/TopDownCPP/Maps/TopDownExampleMap
 
 [ModuleFileTracking]
-WhereIsDalton.TimeStamp=2017.11.09-16.19.02
-WhereIsDalton.LastCompileMethod=Unknown
+WhereIsDalton.TimeStamp=2017.11.09-17.05.25
+WhereIsDalton.LastCompileMethod=External
 PakFile.TimeStamp=2017.11.09-14.26.18
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2017.11.09-14.26.19
@@ -654,9 +674,68 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+ThirdPerson_AnimBP_C.Default=True
+ThirdPerson_AnimBP_C.RootMotion=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+AssetViewerSettings.Color Grading=True
+AssetViewerSettings.Lens=True
+AssetViewerSettings.Rendering Features=True
+AnimBlueprint.ClassOptions=True
+AnimBlueprint.Optimization=True
+AnimBlueprint.Interfaces=True
+AnimBlueprint.BlueprintOptions=True
+AnimBlueprint.Packaging=True
+AnimBlueprint.Thumbnail=True
+BlendSpace1D.AdditiveSettings=True
+BlendSpace1D.Axis Settings=True
+BlendSpace1D.BlendSamples=True
+BlendSpace1D.Animation=True
+BlendSpace1D.SampleInterpolation=True
+BlendSpace1D.AnimationNotifies=True
+BlendSpace1D.MetaData=True
+BlendSpace1D.Thumbnail=True
+EdGraph.Graph=True
+AnimationGraph.Graph=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimGraphNode_StateResult.Settings=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
+OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPersonJump_Start.ThirdPersonJump_Start
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -670,7 +749,7 @@ FourPanes2x2.Viewport 1.Percentages1=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages2=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Percentages3=X=0.500 Y=0.500
 FourPanes2x2.Viewport 1.Viewport0.TypeWithinLayout=Default
-FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Default
+FourPanes2x2.Viewport 1.Viewport1.TypeWithinLayout=Cinematic
 FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.bIsMaximized=True
@@ -689,5 +768,52 @@ MeshImportExport=../../../../../../Users/studentVR/Documents/Unreal Projects/Whe
 WorldRoot=../../../../../../Users/studentVR/Documents/Unreal Projects/WhereIsDalton/Content/
 Level=../../../../../../Users/studentVR/Documents/Unreal Projects/WhereIsDalton/Content/
 Project=C:/Program Files/Epic Games/UE_4.18/
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+ViewModeIndex=VMI_Lit
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
+NotifyTimingNodeColor=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_M.T_Brick_Clay_New_M;
+
+[DetailPropertyExpansion]
+PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+Object=
+
+[AssetEditorToolkitTabLocation]
+/Game/Mannequin/Animations/ThirdPersonIdle.ThirdPersonIdle=1
+/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
