Added Enum of Item Types Added pressing and releasing keys to use items

--- a/WhereIsDalton/Config/DefaultInput.ini
+++ b/WhereIsDalton/Config/DefaultInput.ini
@@ -43,6 +43,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="CallSecondSkill",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="CallThirdSkill",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="CallUltimateSkill",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UseFirstItem",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UseSecondItem",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UseThirdItem",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="UseFourthItem",Key=Four,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
